--- a/styles.css
+++ b/styles.css
@@ -8,12 +8,11 @@ body {
 }
 
 header, main {
-    width: 80%;
+    width: 85%;
     margin: 0 auto;
 }
 
 header .wtr-list {
-    height: 30px;
     margin-bottom: 20px;
 }
 
@@ -54,7 +53,8 @@ img {
 }
 
 .wtr-block {
-    width: 500px;
+    width: 600px;
+    height: fit-content;
     margin: 20px 10px;
 }
 
@@ -84,7 +84,7 @@ button {
 .func-btn {
     background-color: #9EA7A9;
     border-radius: 2px;
-    height: 120%;
+    height: 50px;
     width: 200px;
     cursor: pointer;
 }
@@ -107,12 +107,20 @@ button {
 .feat-name {
     font-weight: bold;
     color: white;
+    clear: both;
 }
 
 .feat-cont {
     background-color: #9EA7A9;
     margin-top: 5px;
     padding: 5px 10px;
+    height: fit-content;
+}
+
+.feat-cont:after {
+    content: " ";
+    display: table;
+    clear: both;
 }
 
 
