--- a/styles.css
+++ b/styles.css
@@ -89,6 +89,14 @@ button {
     cursor: pointer;
 }
 
+#city-name-input {
+    box-sizing: border-box;
+    padding-left: 40px;
+    height: 50px;
+    width: 200px;
+    background-color: #edf0f3;
+}
+
 .wtr-temp {
     color: #7b7b7b;
     font-size: 25px;
